[tool.poetry]
name = "adventofcode2021"
version = "1.0.0"
description = "My Python solution to the *Advent of Code 2021* challenges."
authors = ["Alexander Görtz <goertz@fuzzy.de>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.3.5"
ipython = "^7.30.1"
scikit-image = "^0.19.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
